[gd_scene load_steps=15 format=3 uid="uid://xbptxrdof3ht"]

[ext_resource type="Script" uid="uid://dkkjghj3qpvt7" path="res://scenes/ui/choose_weapons/choose_weapons.gd" id="1_wr1i4"]
[ext_resource type="Texture2D" uid="uid://dxkcgo463majk" path="res://assets/weapons/blade/blade_anim_1.png" id="2_dtwjm"]
[ext_resource type="Texture2D" uid="uid://dbtcdfkaqrxq" path="res://assets/weapons/blade/blade_anim_2.png" id="3_e5qat"]
[ext_resource type="Texture2D" uid="uid://w24ct457ugun" path="res://assets/weapons/blade/blade_anim_3.png" id="4_o5mcs"]
[ext_resource type="Texture2D" uid="uid://cmonhecf0cfqx" path="res://assets/weapons/blade/blade_anim_4.png" id="5_d5qjf"]
[ext_resource type="Texture2D" uid="uid://dyhchq65wvmy0" path="res://assets/weapons/blade/blade_anim_5.png" id="6_vtjqc"]
[ext_resource type="Texture2D" uid="uid://ckpvupkyu05yn" path="res://assets/weapons/spear/spear_anim_1.png" id="7_wahfs"]
[ext_resource type="Texture2D" uid="uid://bl72tdh3h3y5s" path="res://assets/weapons/spear/spear_anim_2.png" id="8_yguc3"]
[ext_resource type="Texture2D" uid="uid://c5mri5d3xvvhu" path="res://assets/weapons/spear/spear_anim_3.png" id="9_qdxwm"]
[ext_resource type="Texture2D" uid="uid://bh2rb672d7vo6" path="res://assets/weapons/spear/spear_anim_4.png" id="10_f0fa4"]
[ext_resource type="Texture2D" uid="uid://bu24h0goj4xel" path="res://assets/weapons/spear/spear_anim_.png" id="11_gpwcs"]
[ext_resource type="Texture2D" uid="uid://6jxh3u2185ov" path="res://assets/ui/wood_paper/Small Text/Small Icons/5.png" id="12_2uu4j"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6p3h8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dtwjm")
}, {
"duration": 1.0,
"texture": ExtResource("3_e5qat")
}, {
"duration": 1.0,
"texture": ExtResource("4_o5mcs")
}, {
"duration": 1.0,
"texture": ExtResource("5_d5qjf")
}, {
"duration": 1.0,
"texture": ExtResource("6_vtjqc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_7mrf1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_wahfs")
}, {
"duration": 1.0,
"texture": ExtResource("8_yguc3")
}, {
"duration": 1.0,
"texture": ExtResource("9_qdxwm")
}, {
"duration": 1.0,
"texture": ExtResource("10_f0fa4")
}, {
"duration": 1.0,
"texture": ExtResource("11_gpwcs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="ChooseWeapons" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wr1i4")

[node name="OverlayColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(480, 270)
layout_mode = 0
offset_right = 480.0
offset_bottom = 270.0
color = Color(0.03529412, 0.54901963, 0.87058824, 0.69411767)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -135.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Blade" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="GridContainer/Blade"]
position = Vector2(-120, 90)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6p3h8")

[node name="BladeButton" type="Button" parent="GridContainer/Blade"]
layout_mode = 0
offset_left = -145.0
offset_top = 130.0
offset_right = -93.0
offset_bottom = 161.0
text = "Blade"

[node name="Spear" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="GridContainer/Spear"]
position = Vector2(90, 90)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_7mrf1")
frame = 3
frame_progress = 0.35743812

[node name="SpearButton" type="Button" parent="GridContainer/Spear"]
layout_mode = 0
offset_left = 60.0
offset_top = 130.0
offset_right = 113.0
offset_bottom = 161.0
text = "Spear"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CloseTextureButton" type="TextureButton" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = 6.0
offset_right = -10.0
offset_bottom = 26.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource("12_2uu4j")
texture_pressed = ExtResource("12_2uu4j")
texture_hover = ExtResource("12_2uu4j")
texture_disabled = ExtResource("12_2uu4j")
texture_focused = ExtResource("12_2uu4j")
stretch_mode = 0

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="gui_input" from="OverlayColorRect" to="." method="_on_overlay_color_rect_gui_input"]
[connection signal="pressed" from="GridContainer/Blade/BladeButton" to="." method="_on_blade_button_pressed"]
[connection signal="pressed" from="GridContainer/Spear/SpearButton" to="." method="_on_spear_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CloseTextureButton" to="." method="_on_close_texture_button_pressed"]
